Overworked all paths and files. Inserted README file. Inserted Swagger UI. Created a simple server providing the static files.
