# public/swagger/waiting-number-service.yml
@@ -1,21 +1,31 @@
-# this is an example of the Uber API
-# as a demonstration of an API spec in YAML
 swagger: '2.0'
 info:
   title: Waiting number service
   description: Manage your waiting numbers
   version: "1.0.0"
-# the domain of the service
 host: localhost
-# array of all schemes that your API supports
 schemes:
-  - https
-# will be prefixed to all paths
-basePath: /v1
+  - http
+basePath: /
 produces:
   - application/json
 paths:
-  /waitingTickets/newTicket:
+  /waitingTicket:
+    get:
+      summary: Get all waiting tickets
+      description: Retrieve an array of all waiting tickets.
+      responses:
+        200:
+          description: Array of waiting tickets
+          schema:
+            type: array
+            items:
+             $ref: '#/definitions/WaitingTicket'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /waitingTicket/newTicket:
     get:
       summary: Get new waiting ticket
       description: Request a new waiting ticket for a client.
@@ -28,9 +38,9 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /waitingTickets/getNextWaiting:
+  /waitingTicket/nextTicket:
     get:
-      summary: Next client in line
+      summary: Next ticket in line
       description: Get the waiting ticket for the next waiting client.
       responses:
         200:
@@ -50,33 +60,6 @@ paths:
           required: true
           type: integer
           format: int32
-  /waitingTickets/{id}/:
-    put:
-      summary: Waiting ticket
-      description: Get the waiting ticket for the given id.
-      responses:
-        200:
-          description: The ticket
-          schema:
-            $ref: '#/definitions/WaitingTicket'
-        404:
-          description: Not found
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-      parameters:
-        - name: id
-          in: path
-          description: ID of the waiting ticket
-          required: true
-          type: string
-        - name: waitingTicket
-          in: body
-          description: Updated waiting ticket
-          required: true
-          type:
-            $ref: '#/definitions/WaitingTicket'
             
 definitions:
   WaitingTicket:
@@ -86,7 +69,7 @@ definitions:
         type: integer
         format: int32
         description: Ticket number to display on the screen.
-      atDesk:
+      deskNumber:
         type: integer
         format: int32
         description: Desk that was assigned to this waiting ticket. Equals to 0 if the ticket wasn't dispached yet.
